--- a/style.css
+++ b/style.css
@@ -18,6 +18,7 @@ body{
       article{
         font-weight: bolder;
         text-decoration:underline;
+        font-size: large;
       }
       
       a:link{
